// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id        Int      @id @default(autoincrement())
  name      String
  email     String   @unique
  hash      String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  events    Event[]
  purchases Purchase[]

  @@map("users")
}

model Event {
  id               Int      @id @default(autoincrement())
  userId           Int
  name             String
  description      String?
  dateTime         DateTime
  venue            String
  availableTickets Int
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt

  user    User     @relation(fields: [userId], references: [id])
  tickets Ticket[]

  @@map("events")
}

model Ticket {
  id                Int      @id @default(autoincrement())
  eventId           Int
  category          String
  price             Int
  availableQuantity Int
  soldQuantity      Int      @default(0)
  createdAt         DateTime @default(now())
  updatedAt         DateTime @updatedAt

  event     Event      @relation(fields: [eventId], references: [id])
  purchases Purchase[]

  @@map("tickets")
}

model Purchase {
  id          Int      @id @default(autoincrement())
  userId      Int
  ticketId    Int
  quantity    Int
  purchasedAt DateTime @default(now())
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  ticket Ticket @relation(fields: [ticketId], references: [id])
  user   User   @relation(fields: [userId], references: [id])

  @@map("purchases")
}
